--- a/public/assets/css/projects.css
+++ b/public/assets/css/projects.css
@@ -43,7 +43,7 @@ h1 {
 .projects-container {
     position: absolute;
     top: 70px;
-    left: 0;
+    left: 11%;
     right: 0;
     color: white;
     max-width: 600px;
