--- a/views/pages/addCollaboration.twig
+++ b/views/pages/addCollaboration.twig
@@ -38,10 +38,10 @@
 			</div>
 
 			<button type="submit">Créer le projet</button>
-		</form>
+		</form>    
 	</div>
 
-
+	{% include "../partials/error.twig" %}
 	{% block script %}
 		<script src="/../../assets/js/addCollaboration.js"></script>
 	{% endblock %}
