--- a/views/pages/addContent.twig
+++ b/views/pages/addContent.twig
@@ -52,6 +52,6 @@ $('#genre').select2({placeholder: 'Sélectionnez un genre', allowClear: true});
 		</div>
 		<button type="submit">Ajouter</button>
 	</form>
-
+	{% include "../partials/error.twig" %}
 
 {% endblock %}
