--- a/views/pages/forgot-password.twig
+++ b/views/pages/forgot-password.twig
@@ -1,7 +1,7 @@
 {% extends "../layouts/base.twig" %}
 
 {% block style %}
-<link rel="stylesheet" href="/../../assets/css/forgot-password.css">
+	<link rel="stylesheet" href="/../../assets/css/forgot-password.css">
 {% endblock %}
 
 {% block title %}
@@ -10,10 +10,26 @@
 
 {% block main %}
 
-	<form action="/forgot-password" method="POST">
+	<form id="resetPasswordForm" action="/forgot-password" method="POST">
 		<label for="mail">Mot de passe oublié</label>
-		<input type="email" name="mail" placeholder="Entrez votre adresse e-mail" required>
+		<input type="email" id="email" name="mail" placeholder="Entrez votre adresse e-mail" required>
 		<button type="submit">Envoyer un lien de réinitialisation</button>
 		<a href="/login">Annuler</a>
 	</form>
+
+	{% include "../partials/error.twig" %}
+{% endblock %}
+
+{% block script %}
+<script src="/../../assets/js/error.js"></script>
+<script>
+       
+        document.getElementById('resetPasswordForm').addEventListener('submit', (event) => {
+            event.preventDefault(); 
+
+            const email = document.getElementById('email').value;
+        
+            handleFetch('/reset-password', { email });
+        });
+    </script>
 {% endblock %}
