--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -111,6 +111,7 @@
 			</ul>
 		</div>
 	</section>
+	{% include "../partials/error.twig" %}
 	{% block script %}
 		<script src="/../../assets/js/home.js"></script>
 	{% endblock %}
