--- a/views/pages/messagerie.twig
+++ b/views/pages/messagerie.twig
@@ -38,6 +38,7 @@
 			<button id="cancelDeleteButton">Annuler</button>
 		</div>
 	</div>
+	{% include "../partials/error.twig" %}
 
 	{% block script %}
 		<script src="/../../assets/js/messagerie.js"></script>
