--- a/public/assets/css/account.css
+++ b/public/assets/css/account.css
@@ -156,7 +156,7 @@ a {
     border: 1px solid red;
     background-color: red;
     border-radius: 5px;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .modal {
