--- a/public/assets/css/addCollaboration.css
+++ b/public/assets/css/addCollaboration.css
@@ -53,9 +53,7 @@ body {
 }
 
 #searchUser {
-    position: absolute;
-    top: 63%;
-    left: 35%;
+
     width: 63.5%;
     padding: 5px;
     border: 1px solid #ffffff;
@@ -65,7 +63,8 @@ body {
     background-color: #1e1e1e;
     color: white;
     font-size: 1rem;
-    margin-top: 15px;
+    margin-top: -35px;
+    margin-right: 0;
     z-index: 10;
 }
 
@@ -290,7 +289,7 @@ input {
 
     .title {
         position: absolute;
-        right: 13%;
+        right: 2%;
     }
 
 }
