--- a/public/assets/css/forgot-password.css
+++ b/public/assets/css/forgot-password.css
@@ -64,7 +64,7 @@ a {
     justify-content: center;
     padding: 10px;
     background-color: red;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-size: 0.9em;
     transition: color 0.3s ease;
@@ -72,4 +72,38 @@ a {
 
 a:hover {
     color: #80ffe6;
+}
+
+/* Style de la modal */
+.modal {
+    position: fixed;
+    top: 10%;
+    left: 42%;
+    width: 100%;
+   
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background: #151515;
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+    text-align: center;
+}
+
+button {
+    background-color: aquamarine;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #0056b3;
 }
