--- a/views/pages/collaboration.twig
+++ b/views/pages/collaboration.twig
@@ -85,7 +85,8 @@
 						<select id="genre" name="genre" required>
 							<option value="" disabled selected>Sélectionnez un genre</option>
 							{% for genre in genres %}
-								<option value="{{ genre }}">{{ genre }} </option>
+								<option value="{{ genre }}">{{ genre }}
+								</option>
 							{% endfor %}
 						</select>
 					</div>
@@ -95,9 +96,9 @@
 				</form>
 			</div>
 		</div>
-
-
-	</div>
-
-</section>{% endblock %}{% block script %}
-<script src="/../../assets/js/collaboration.js"></script>{% endblock %}
+	</section>
+	{% include "../partials/error.twig" %}
+{% endblock %}
+{% block script %}
+	<script src="/../../assets/js/collaboration.js"></script>
+{% endblock %}
