--- a/views/pages/profil.twig
+++ b/views/pages/profil.twig
@@ -124,6 +124,7 @@
 			</div>
 		</div>
 	</div>
+	{% include "../partials/error.twig" %}
 	{% block script %}
 		<script src="/../../assets/js/profil.js"></script>
 	{% endblock %}
