--- a/views/pages/reset-password.twig
+++ b/views/pages/reset-password.twig
@@ -1,7 +1,7 @@
 {% extends "../layouts/base.twig" %}
 
 {% block style %}
-<link rel="stylesheet" href="/../../assets/css/reset-password.css">
+	<link rel="stylesheet" href="/../../assets/css/reset-password.css">
 {% endblock %}
 
 {% block title %}
@@ -10,13 +10,15 @@
 
 {% block main %}
 
-<form action="/reset-password" method="POST">
-  <input type="hidden" name="token" value="{{ token }}">
-  <label for="newPassword">Nouveau mot de passe :</label>
-  <input type="password" name="newPassword" placeholder="Entrez votre nouveau mot de passe" required>
-  <label for="confirmPassword">Confirmez le mot de passe :</label>
-  <input type="password" name="confirmPassword" placeholder="Confirmez votre mot de passe" required>
-  <button type="submit">Réinitialiser le mot de passe</button>
-  <a href="/login">Annuler</a>
-</form>
+	<form action="/reset-password" method="POST">
+		<input type="hidden" name="token" value="{{ token }}">
+		<label for="newPassword">Nouveau mot de passe :</label>
+		<input type="password" name="newPassword" placeholder="Entrez votre nouveau mot de passe" required>
+		<label for="confirmPassword">Confirmez le mot de passe :</label>
+		<input type="password" name="confirmPassword" placeholder="Confirmez votre mot de passe" required>
+		<button type="submit">Réinitialiser le mot de passe</button>
+		<a href="/login">Annuler</a>
+	</form>
+
+	{% include "../partials/error.twig" %}
 {% endblock %}
