--- a/views/pages/studio.twig
+++ b/views/pages/studio.twig
@@ -25,6 +25,7 @@
 	</div>
 	<div id="map"></div>
 	<div id="loading" class="loading">Chargement des studios...</div>
+	<div id="directions-container" style="display:none;"></div>
 
 	<div id="destinationModal" class="modal">
 		<div class="modal-content">
