--- a/public/assets/css/profil.css
+++ b/public/assets/css/profil.css
@@ -278,6 +278,7 @@ button.delete .dots {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: white;
 }
 
 
